Profile Widget - Twitter - Fix design on mobile

--- a/less/widgets/profile.less
+++ b/less/widgets/profile.less
@@ -207,6 +207,27 @@
 		height: 40px;
 	}
 
+	// Twitter Avatar
+
+	.twitter__avatar {
+		@bp-global-small {
+			display: inline-block;
+		}
+	}
+
+
+
+
+	// Avatar Image
+	// ------------------------------
+
+
+	.tweet-item {
+		@bp-global-small {
+			display: block;
+		}
+	}
+
 
 
 
@@ -248,7 +269,6 @@
 	    -webkit-align-items: flex-end;
    		-ms-flex-align: end;
     	align-items: flex-end;
-		margin-top: 20px;
 	}
 
 
